# redalert

./: .gitignore  README.md  pyproject.toml
.github/workflows/: redalert.yml
src/redalert/: cli.py  scraper.py  telegram.py
